# Projects

Project1_Random_Graph/: graph.py  random_graph.py
Project2_Simple_Ann/: Task2.ipynb
Project3_Simple_ANN_C++/: CMakeLists.txt  declarations.cpp  main.cpp  main.h
Project4_Pytorch_Quantization/: FinalTask11.ipynb  FinalTask11_.ipynb
Project4_Pytorch_Quantization/Resnet/: Deep_Residual_Learning.txt  Resources.txt
Project5_Deploying_Pytorch_Quantized_Model_On_Raspberrypi/: FinalTask11_.ipynb  Resources.txt  Task13.ipynb  Task13.py
